--- a/WebApplicationBooks/Views/Shared/_Layout.cshtml
+++ b/WebApplicationBooks/Views/Shared/_Layout.cshtml
@@ -1,9 +1,9 @@
 ﻿<html>
     <head>
-        @await Html.PartialAsync("MetatagsPartial");
+        @await Html.PartialAsync("MetatagsPartial")
     </head>
 
     <body>
-        @RenderBody();
+        @RenderBody()
     </body>
 </html>
