--- a/WebApplicationBooks/Views/User/UserContent.cshtml
+++ b/WebApplicationBooks/Views/User/UserContent.cshtml
@@ -10,6 +10,10 @@
 		</div>
 	</div>
 
+	<br>
+	<form asp-controller="User" asp-action="UserContent">
+		Username search: <input type="text" name="SearchUsername" />
+	</form>
 	<br><br>
 	@if(Model.Count() > 0)
 	{
