Fix bug (remove magic number, secure user, automapper)

--- a/WebApplicationBooks/Views/Account/Registration.cshtml
+++ b/WebApplicationBooks/Views/Account/Registration.cshtml
@@ -14,6 +14,12 @@
             <span asp-validation-for="Username"></span>
         </div>
 
+        <div class="col">
+            <input type="text" asp-for="MessagerUsername" class="form-control" />
+            <label class="form-label" asp-for="MessagerUsername">Messager Username</label>
+            <span asp-validation-for="MessagerUsername"></span>
+        </div>
+
         <div class="col mb-4">
             <input type="password" asp-for="Password" class="form-control" />
             <label class="form-label" asp-for="Password">Password</label>
