--- a/WebApplicationBooks/Views/Home/Index.cshtml
+++ b/WebApplicationBooks/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using WebApplicationBooks.Models;
+@inject SignInManager<AccountUser> SignInManager
+@inject UserManager<AccountUser> UserManager
 
 <html lang="en">
 <head>
@@ -12,16 +13,16 @@
     <div id="block-body">
         <div class="block-menu">
             <ul>
-                <li><a asp-controller="Account" asp-action="Registration">Регестрация</a></li>
                 @if (!SignInManager.IsSignedIn(User))
                 {
-                    <li><a asp-controller="Account" asp-action="Login">Войти</a></li>
+                    <li><a asp-controller="Account" asp-action="Registration">Sign Up</a></li>
+                    <li><a asp-controller="Account" asp-action="Login">Sign In</a></li>
                 }
                 else
                 {
-                    <li><a asp-controller="Account" asp-action="Logout">Выйти</a></li>
+                    <li><a asp-controller="Account" asp-action="Logout">Exit</a></li>
                     <li><a asp-controller="User" asp-action="UserContent">User URL</a></li>
-                    <li><a asp-controller="Urls" asp-action="UrlsUsers">Все URL</a></li>
+                    <li><a asp-controller="Urls" asp-action="UrlsUsers">All URL</a></li>
                     @if (User.IsInRole("admin"))
                     {
                         <li><a asp-controller="Admin" asp-action="AdminContent">Admin URL</a></li>
