--- a/WebApplicationBooks/Views/User/UserContent.cshtml
+++ b/WebApplicationBooks/Views/User/UserContent.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<WebApplicationBooks.Domain.Repository.Entity.Book>
+﻿@using WebApplicationBooks.Domain.Repository.Entity
+@model IEnumerable<Book>
 
 <link rel="stylesheet" href="~/lib/boostrap/css/bootstrap.min.css" />
 <script src="~/lib/boostrap/js/bootstrap.bundle.min.js"></script>
@@ -10,10 +11,6 @@
 		</div>
 	</div>
 
-	<br>
-	<form asp-controller="User" asp-action="UserContent">
-		Username search: <input type="text" name="SearchUsername" />
-	</form>
 	<br><br>
 	@if(Model.Count() > 0)
 	{
