--- a/WebApplicationBooks/Views/Account/Registration.cshtml
+++ b/WebApplicationBooks/Views/Account/Registration.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplicationBooks.Models.LoginUser
+﻿@model WebApplicationBooks.Models.SignUpUser
 
 <link rel="stylesheet" href="~/lib/boostrap/css/bootstrap.min.css" />
 <script src="~/lib/boostrap/js/bootstrap.bundle.min.js"></script>
